--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drawing from the Future</title>
-    <script src="lib/p5.js"></script>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Depaul University GAM-240</title>
 </head>
 
 <body>
-    <script src="matrix.js"></script>
-    <script src="sketch.js"></script>
+    <Header>
+        <h1>GAM-240</h1>
+    </Header>
+
+    <Nav>
+        <ul>
+            <li><a href="./Drawing from the Future/">Matrix Rain</a></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </Nav>
 </body>
 
 </html>
