fixed the index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <Nav>
         <ul>
-            <li><a href="./Drawing from the Future/">Matrix Rain</a></li>
+            <li><a href="./Drawing from the Future/index.html">Matrix Rain</a></li>
             <li></li>
             <li></li>
         </ul>
