--- a/Drawing from the Future/index.html
+++ b/Drawing from the Future/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drawing from the Future</title>
-    <script src="lib/p5.js"></script>
+    <script src="lib/p5.min.js"></script>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
